Spacing at the bottom of dashboard should now be correct

--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -29,10 +29,10 @@
 
 @media (max-width: 768px) {
   .top-bar {
-    height: 4rem;
+    height: 3.6rem;
   }
   .menu-button {
-    width: 3rem;
-    height: 3rem;
+    width: 2.7rem;
+    height: 2.7rem;
   }
 }
